# tsp-output/@typespec/openapi3/openapi.v1.json
@@ -36,9 +36,7 @@
                       }
                     }
                   },
-                  "required": [
-                    "data"
-                  ]
+                  "required": ["data"]
                 }
               }
             }
@@ -125,9 +123,7 @@
                       }
                     }
                   },
-                  "required": [
-                    "data"
-                  ]
+                  "required": ["data"]
                 }
               }
             }
@@ -458,9 +454,7 @@
                       }
                     }
                   },
-                  "required": [
-                    "data"
-                  ]
+                  "required": ["data"]
                 }
               }
             }
@@ -649,10 +643,7 @@
     "schemas": {
       "AuthInfo": {
         "type": "object",
-        "required": [
-          "email",
-          "password"
-        ],
+        "required": ["email", "password"],
         "properties": {
           "email": {
             "type": "string"
@@ -664,11 +655,7 @@
       },
       "Course": {
         "type": "object",
-        "required": [
-          "id",
-          "name",
-          "description"
-        ],
+        "required": ["id", "name", "description"],
         "properties": {
           "id": {
             "type": "number"
@@ -683,10 +670,7 @@
       },
       "CourseCreateDTO": {
         "type": "object",
-        "required": [
-          "name",
-          "description"
-        ],
+        "required": ["name", "description"],
         "properties": {
           "name": {
             "type": "string"
@@ -709,12 +693,7 @@
       },
       "CourseLesson": {
         "type": "object",
-        "required": [
-          "id",
-          "courseId",
-          "name",
-          "body"
-        ],
+        "required": ["id", "courseId", "name", "body"],
         "properties": {
           "id": {
             "type": "number"
@@ -732,10 +711,7 @@
       },
       "CourseLessonCreateDTO": {
         "type": "object",
-        "required": [
-          "name",
-          "body"
-        ],
+        "required": ["name", "body"],
         "properties": {
           "name": {
             "type": "string"
@@ -811,9 +787,7 @@
       },
       "TokenInfo": {
         "type": "object",
-        "required": [
-          "token"
-        ],
+        "required": ["token"],
         "properties": {
           "token": {
             "type": "string"
@@ -842,9 +816,7 @@
       },
       "UnprocessableEntityError": {
         "type": "object",
-        "required": [
-          "errors"
-        ],
+        "required": ["errors"],
         "properties": {
           "type": {
             "type": "string"
@@ -876,22 +848,14 @@
                   "type": "string"
                 }
               },
-              "required": [
-                "message",
-                "rule",
-                "field"
-              ]
+              "required": ["message", "rule", "field"]
             }
           }
         }
       },
       "User": {
         "type": "object",
-        "required": [
-          "id",
-          "fullName",
-          "email"
-        ],
+        "required": ["id", "fullName", "email"],
         "properties": {
           "id": {
             "type": "number"
@@ -909,9 +873,7 @@
       },
       "UserCreateDTO": {
         "type": "object",
-        "required": [
-          "email"
-        ],
+        "required": ["email"],
         "properties": {
           "fullName": {
             "type": "string"
@@ -931,10 +893,7 @@
       },
       "Versions": {
         "type": "string",
-        "enum": [
-          "v1",
-          "v2"
-        ]
+        "enum": ["v1", "v2"]
       }
     },
     "securitySchemes": {
